@@ -716,6 +716,7 @@ All:
 
 All (GUI):
 
+- Add wxEVT_MAGNIFY mouse event (Joost Nieuwenhuijse).
 - Add wxGenericListCtrl::EndEditLabel() (Tim Kosse).
 - Implement bounding box computation in wxGCDC (Toni Ruža).
 - Fix saving GIF animations with 2.5s+ delays between frames (elvissteinjr).
